--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,16 +1,19 @@
 .app {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   .home-page {
     width: $width;
-    max-width: $max-width;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: calc(100% - 70px);
     &-head {
       padding-top: 60px;
       width: 100%;
+      max-width: $max-width;
       display: flex;
       justify-content: space-between;
       input {
@@ -19,8 +22,83 @@
         height: 40px;
         font-size: 1.2rem;
         border-radius: 5px;
+        @include shadow;
       }
-      
+    }
+  }
+}
+* {
+  border: none;
+  text-transform: none;
+}
+*::first-letter {
+  text-transform: capitalize;
+}
+
+.drop-down {
+  margin-right: 5px;
+  width: 160px;
+  position: relative;
+  @include shadow;
+  .value {
+    width: 100%;
+    height: 40px;
+    padding: 0 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 1.2rem;
+  }
+  &-buttons {
+    position: absolute;
+    width: 100%;
+    margin-top: 3px;
+    padding: 0 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 5px;
+    button {
+      width: 100%;
+      height: 30px;
+      cursor: pointer;
+      text-align: left;
+      font-size: 1rem;
+      padding: 0px 15px;
+      background-color: transparent;
+    }
+  }
+}
+.country-cards-section {
+  margin-bottom: 100px;
+  margin-top: 40px;
+  width: 100%;
+  max-width: 1400px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 10px 30px;
+  justify-content: center;
+  align-content: center;
+  .card {
+    @include shadow;
+    width: 300px;
+    height: 400px;
+    margin: 20px auto;
+    cursor: pointer;
+    img {
+      width: 100%;
+      height: 180px;
+    }
+    .info {
+      padding: 0 20px;
+      .details {
+        height: 120px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+      }
     }
   }
 }
