--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,2 +1,7 @@
-$max-width:1100px;
-$width:95%;
+$max-width: 1100px;
+$width: 90%;
+@mixin shadow {
+    box-shadow: 0px 2px 22px 0px rgba(0,0,0,0.64);
+    -webkit-box-shadow: 0px 2px 22px 0px rgba(0,0,0,0.64);
+    -moz-box-shadow: 0px 2px 22px 0px rgba(0,0,0,0.64);
+}
