--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,7 @@
   outline: none;
   border: none;
   text-decoration: none;
+  font-family: 'Catamaran', sans-serif;
 }
 .center {
   height: 100vh;
